--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,8 +59,8 @@ flutter:
   fonts:
     - family: Lato
       fonts:
-        - assets: assets/fonts/Lato-Regular.ttf
-        - assets: assets/fonts/Lato-Bold.ttf
+        - asset: assets/fonts/Lato-Regular.ttf
+        - asset: assets/fonts/Lato-Bold.ttf
           weight: 700
     - family: Anton
       fonts:
